[package]
name = "soltrack"
version = "1.0.0"
edition = "2021"
description = "A tool to find the developer of a Solana program"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
clap = "2.33.3"
regex = "1.5.4"
solana-client = "1.8.5"
solana-sdk = "1.8.5"
